--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ blockquote {
 -------------------------------------------------------------------*/
 
 .main-banner {
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     background: #AF9483;
 
@@ -226,6 +226,7 @@ blockquote {
 }
 
 .heading {
+    padding-top: 100px;
     color: #fff;
     display: table-cell;
     vertical-align: middle;
